[package]
name = "pfrust"
version = "0.1.0"
authors = ["Odin Aleksander Severinsen <odin@severinsen.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
probability = "0.17.0"
ndarray = "0.12"
ndarray-linalg = { version = "0.11", features = ["openblas"] }
textplots = "0.5.0"
custom_error = "1.7.1"