[package]
name = "pfrust"
version = "0.1.0"
authors = ["Odin Aleksander Severinsen <odin@severinsen.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_distr = "0.2"
ndarray = "0.12"
ndarray-linalg = { version = "0.11", features = ["openblas"] }
ndarray-rand = "0.10"
custom_error = "1.7.1"
#rosrust = "0.9"
#rosrust_msg = "0.1"
gnuplot = "0.0.34"
num = "0.2"